add maxScore properly

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <button id="spin-btn">Spin</button>
           <img id="arrow-btn" src="./icon/right-arrow.png" alt="spinner-arrow" />
         </div>
-        <div id="final-value">
-          <p>Click On The Spin Button To Start</p>
+        <div >
+          <p id="final-value">Click On The Spin Button To Start</p>
           <p>Max Score : <span id="max-score">0</span></p>
         </div>
       </div>
