create Score board

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spin The Wheel App</title>
     <!-- add fevicon -->
-    <link rel="icon" type="image/x-icon" href="/icon//favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/icon//favicon.ico" />
     <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap"
@@ -13,24 +13,32 @@
     />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="container">
-          <canvas id="wheel"></canvas>
-          <button id="spin-btn">Spin</button>
-          <img id="arrow-btn" src="./icon/right-arrow.png" alt="spinner-arrow" />
-        </div>
-        <div >
-          <p id="final-value">Click On The Spin Button To Start</p>
-          <p>Max Score : <span id="max-score">0</span></p>
-        </div>
+      <div class="container">
+        <canvas id="wheel"></canvas>
+        <button id="spin-btn">Spin</button>
+        <img id="arrow-btn" src="./icon/right-arrow.png" alt="spinner-arrow" />
       </div>
-      <!-- Chart JS -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-      <!-- Chart JS Plugin for displaying text over chart -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script>
-      <!-- Script -->
-      <script src="script.js"></script>
-</body>
+      <div>
+        <p id="final-value">Click On The Spin Button To Start</p>
+        <p>Max Score : <span id="max-score">0</span></p>
+      </div>
+      <div class="popup" onclick="myFunction()">
+        Show Score Board
+        <span class="popuptext" id="myPopup">
+            <p>My Score</p>
+            <ul id="score-board"></ul>
+        </span>
+      </div>
+    </div>
+
+    <!-- Chart JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <!-- Chart JS Plugin for displaying text over chart -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script>
+    <!-- Script -->
+    <script src="script.js"></script>
+  </body>
 </html>
