--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spin The Wheel App</title>
     <!-- add fevicon -->
-    <link rel="icon" type="image/x-icon" href="/icon//favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./icon/favicon.ico" />
     <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap"
